Added current line highlight